--- a/index.html
+++ b/index.html
@@ -4,10 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pelis Web</title>
-    <!-- favicon -->
-    <link rel="shortcut icon" href="./img/favicon/favicon.ico" type="image/x-icon">
+    
+    <link rel="shortcut icon" href="./img/favicon/favicon.ico" type="image/x-icon">          <!-- favicon -->
+    <link rel="stylesheet" href="/styles/style.css">           <!-- Enlasado con CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">      <!-- bootstrap-icons -->
 </head>
 <body>
+    <!-- INICIO DEL HEADER -->
+    <header>
+        <div class="nav1">
+            <a class="logo" href="#">LOGO</a>
+            <nav>
+                <a href="#explorar">Explorar</a>
+                <a href="#peliculas">Peliculas</a>
+                <a href="#series">Series</a>
+                <a href="#servicios">Servicios</a>
+                <a href="#contacto">Contacto</a>
+            </nav>
+            <i class="bi bi-list"></i>
+        </div>
+        <div class="nav2">
+            <div>
+                <a class="fondo" href="#">Login</a>
+                <a class="fondo2" href="#">Sing up</a>
+            </div>
+        <div>
+    </header>
+    <!-- FIN DEL HEADER -->
 
+
+    <script src="/js/script.js"></script>
 </body>
 </html>
