--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Pelis Web</title>
     
     <link rel="shortcut icon" href="./img/favicon/favicon.ico" type="image/x-icon">          <!-- favicon -->
-    <link rel="stylesheet" href="/styles/style.css">           <!-- Enlasado con CSS -->
+    <link rel="stylesheet" href="styles/style.css">           <!-- Enlasado con CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">      <!-- bootstrap-icons -->
 </head>
 <body>
@@ -33,6 +33,6 @@
     <!-- FIN DEL HEADER -->
 
 
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
