Se agregó maquetado simple para index.html y se desarrollo la página detalles junto con sus estilos

--- a/index.html
+++ b/index.html
@@ -4,10 +4,109 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pelis Web</title>
+    <!-- estilos -->
+    <link rel="stylesheet" href="./styles/style.css">
     <!-- favicon -->
     <link rel="shortcut icon" href="./img/favicon/favicon.ico" type="image/x-icon">
+    <!-- google fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <!-- bootstrap-icons --> 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
 <body>
+    <!-- INICIO DEL HEADER -->
+    <header>
+        <div class="nav1">
+            <a class="logo" href=""><img src="./img/logo.png" alt="logo" height="68px"></a>
+            <nav>
+                <a href="#explorar">Explorar</a>
+                <a href="#peliculas">Peliculas</a>
+                <a href="#series">Series</a>
+                <a href="#servicios">Servicios</a>
+                <a href="#contacto">Contacto</a>
+            </nav>
+            <i class="bi bi-list"></i>
+        </div>
+        <div class="nav2">
+            <div>
+                <a class="fondo" href="#">Login</a>
+                <a class="fondo2" href="#">Sing up</a>
+            </div>
+        <div>
+    </header>
+    <!-- FIN DEL HEADER -->
 
+    <!-- INICIO DE MAIN -->
+    <main>
+        <h2>Ciencia Ficción</h2>
+        <hr style="margin-left: 3em;margin-right: 3em">
+        <section>
+
+            <div class="peli-tarjeta">
+                <img src="./img/detalles/poster.png" alt="Póster de pelicula">
+                <h3>Interestellar</h3>
+                <p><strong>Género:</strong> Ciencia Ficción</p>
+                <a role="button" class="btn-detalles" href="./pages/detalles.html"><i class="fa-solid fa-eye"></i> Ver más</a>
+            </div>   
+
+            <div class="peli-tarjeta">
+                <img src="./img/detalles/poster.png" alt="Póster de pelicula">
+                <h3>Interestellar</h3>
+                <p><strong>Género:</strong> Ciencia Ficción</p>
+                <a role="button" class="btn-detalles" href="./pages/detalles.html"><i class="fa-solid fa-eye"></i> Ver más</a>
+            </div>
+
+            <div class="peli-tarjeta">
+                <img src="./img/detalles/poster.png" alt="Póster de pelicula">
+                <h3>Interestellar</h3>
+                <p><strong>Género:</strong> Ciencia Ficción</p>
+                <a role="button" class="btn-detalles" href="./pages/detalles.html"><i class="fa-solid fa-eye"></i> Ver más</a>
+            </div>
+
+            <div class="peli-tarjeta">
+                <img src="./img/detalles/poster.png" alt="Póster de pelicula">
+                <h3>Interestellar</h3>
+                <p><strong>Género:</strong> Ciencia Ficción</p>
+                <a role="button" class="btn-detalles" href="./pages/detalles.html"><i class="fa-solid fa-eye"></i> Ver más</a>
+            </div>
+
+            <div class="peli-tarjeta">
+                <img src="./img/detalles/poster.png" alt="Póster de pelicula">
+                <h3>Interestellar</h3>
+                <p><strong>Género:</strong> Ciencia Ficción</p>
+                <a role="button" class="btn-detalles" href="./pages/detalles.html"><i class="fa-solid fa-eye"></i> Ver más</a>
+            </div>
+
+            <div class="peli-tarjeta">
+                <img src="./img/detalles/poster.png" alt="Póster de pelicula">
+                <h3>Interestellar</h3>
+                <p><strong>Género:</strong> Ciencia Ficción</p>
+                <a role="button" class="btn-detalles" href="./pages/detalles.html"><i class="fa-solid fa-eye"></i> Ver más</a>
+            </div>
+
+            <div class="peli-tarjeta">
+                <img src="./img/detalles/poster.png" alt="Póster de pelicula">
+                <h3>Interestellar</h3>
+                <p><strong>Género:</strong> Ciencia Ficción</p>
+                <a role="button" class="btn-detalles" href="./pages/detalles.html"><i class="fa-solid fa-eye"></i> Ver más</a>
+            </div>
+
+            <div class="peli-tarjeta">
+                <img src="./img/detalles/poster.png" alt="Póster de pelicula">
+                <h3>Interestellar</h3>
+                <p><strong>Género:</strong> Ciencia Ficción</p>
+                <a role="button" class="btn-detalles" href="./pages/detalles.html"><i class="fa-solid fa-eye"></i> Ver más</a>
+            </div>
+
+        </section>
+    </main>
+    <!-- FIN DE MAIN -->
+
+    
+
+    <!-- javascript -->
+    <script src="./js/script.js"></script>
+     <!-- fontawesome iconos -->
+    <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
 </body>
 </html>
