Se modificaron íconos

--- a/index.html
+++ b/index.html
@@ -46,56 +46,56 @@
                 <img src="./img/detalles/poster.png" alt="Póster de pelicula">
                 <h3>Interestellar</h3>
                 <p><strong>Género:</strong> Ciencia Ficción</p>
-                <a role="button" class="btn-detalles" href="./pages/detalles.html"><i class="fa-solid fa-eye"></i> Ver más</a>
+                <a role="button" class="btn-detalles" href="./pages/detalles.html"><i class="bi bi-eye-fill"></i> Ver más</a>
             </div>   
 
             <div class="peli-tarjeta">
                 <img src="./img/detalles/poster.png" alt="Póster de pelicula">
                 <h3>Interestellar</h3>
                 <p><strong>Género:</strong> Ciencia Ficción</p>
-                <a role="button" class="btn-detalles" href="./pages/detalles.html"><i class="fa-solid fa-eye"></i> Ver más</a>
+                <a role="button" class="btn-detalles" href="./pages/detalles.html"><i class="bi bi-eye-fill"></i> Ver más</a>
             </div>
 
             <div class="peli-tarjeta">
                 <img src="./img/detalles/poster.png" alt="Póster de pelicula">
                 <h3>Interestellar</h3>
                 <p><strong>Género:</strong> Ciencia Ficción</p>
-                <a role="button" class="btn-detalles" href="./pages/detalles.html"><i class="fa-solid fa-eye"></i> Ver más</a>
+                <a role="button" class="btn-detalles" href="./pages/detalles.html"><i class="bi bi-eye-fill"></i> Ver más</a>
             </div>
 
             <div class="peli-tarjeta">
                 <img src="./img/detalles/poster.png" alt="Póster de pelicula">
                 <h3>Interestellar</h3>
                 <p><strong>Género:</strong> Ciencia Ficción</p>
-                <a role="button" class="btn-detalles" href="./pages/detalles.html"><i class="fa-solid fa-eye"></i> Ver más</a>
+                <a role="button" class="btn-detalles" href="./pages/detalles.html"><i class="bi bi-eye-fill"></i> Ver más</a>
             </div>
 
             <div class="peli-tarjeta">
                 <img src="./img/detalles/poster.png" alt="Póster de pelicula">
                 <h3>Interestellar</h3>
                 <p><strong>Género:</strong> Ciencia Ficción</p>
-                <a role="button" class="btn-detalles" href="./pages/detalles.html"><i class="fa-solid fa-eye"></i> Ver más</a>
+                <a role="button" class="btn-detalles" href="./pages/detalles.html"><i class="bi bi-eye-fill"></i> Ver más</a>
             </div>
 
             <div class="peli-tarjeta">
                 <img src="./img/detalles/poster.png" alt="Póster de pelicula">
                 <h3>Interestellar</h3>
                 <p><strong>Género:</strong> Ciencia Ficción</p>
-                <a role="button" class="btn-detalles" href="./pages/detalles.html"><i class="fa-solid fa-eye"></i> Ver más</a>
+                <a role="button" class="btn-detalles" href="./pages/detalles.html"><i class="bi bi-eye-fill"></i> Ver más</a>
             </div>
 
             <div class="peli-tarjeta">
                 <img src="./img/detalles/poster.png" alt="Póster de pelicula">
                 <h3>Interestellar</h3>
                 <p><strong>Género:</strong> Ciencia Ficción</p>
-                <a role="button" class="btn-detalles" href="./pages/detalles.html"><i class="fa-solid fa-eye"></i> Ver más</a>
+                <a role="button" class="btn-detalles" href="./pages/detalles.html"><i class="bi bi-eye-fill"></i> Ver más</a>
             </div>
 
             <div class="peli-tarjeta">
                 <img src="./img/detalles/poster.png" alt="Póster de pelicula">
                 <h3>Interestellar</h3>
                 <p><strong>Género:</strong> Ciencia Ficción</p>
-                <a role="button" class="btn-detalles" href="./pages/detalles.html"><i class="fa-solid fa-eye"></i> Ver más</a>
+                <a role="button" class="btn-detalles" href="./pages/detalles.html"><i class="bi bi-eye-fill"></i> Ver más</a>
             </div>
 
         </section>
@@ -106,7 +106,5 @@
 
     <!-- javascript -->
     <script src="./js/script.js"></script>
-     <!-- fontawesome iconos -->
-    <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
 </body>
 </html>
