--- a/pages/detalles.html
+++ b/pages/detalles.html
@@ -44,15 +44,13 @@
 				<p class="descripcion">
 					Narra las aventuras de un grupo de exploradores que hacen uso de un agujero de gusano recientemente descubierto para superar las limitaciones de los viajes espaciales tripulados y vencer las inmensas distancias que tiene un viaje interestelar.
 				</p>
-                <a role="button" class="btn-detalles" href="../index.html"><i class="fa-solid fa-arrow-left"></i> Volver</a>
-				<button role="button" class="btn-detalles" id="btnReproducir"><i class="fas fa-play"></i> Reproducir</button>
+                <a role="button" class="btn-detalles" href="../index.html"><i class="bi bi-arrow-left-short"></i> Volver</a>
+				<button role="button" class="btn-detalles" id="btnReproducir"><i class="bi bi-play-fill></i> Reproducir</button>
 			</div>
 		</section>
     </main>
 
     <!-- javascript -->
     <script src="../js/script.js"></script>
-    <!-- fontawesome iconos -->
-    <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
 </body>
 </html>
