Se agregó una comilla que faltaba

--- a/pages/detalles.html
+++ b/pages/detalles.html
@@ -45,7 +45,7 @@
 					Narra las aventuras de un grupo de exploradores que hacen uso de un agujero de gusano recientemente descubierto para superar las limitaciones de los viajes espaciales tripulados y vencer las inmensas distancias que tiene un viaje interestelar.
 				</p>
                 <a role="button" class="btn-detalles" href="../index.html"><i class="bi bi-arrow-left-short"></i> Volver</a>
-				<button role="button" class="btn-detalles" id="btnReproducir"><i class="bi bi-play-fill></i> Reproducir</button>
+				<button role="button" class="btn-detalles" id="btnReproducir"><i class="bi bi-play-fill"></i> Reproducir</button>
 			</div>
 		</section>
     </main>
