--- a/pages/detalles.html
+++ b/pages/detalles.html
@@ -30,7 +30,7 @@
         <div class="nav2">
             <div>
                 <a class="fondo" href="#">Login</a>
-                <a class="fondo2" href="#">Sing up</a>
+                <a class="fondo2" href="#">Registrarte</a>
             </div>
         <div>
     </header>
@@ -49,7 +49,11 @@
 			</div>
 		</section>
     </main>
-
+    <footer class="foot">
+        <a href="https://twitter.com/" target="_blank"><img src="../img/twiter.png" alt="twiter" width="20px" height="20px"></a> <a href="https://facebook.com/" target="_blank"><img src="../img/face.png" alt="facebook" width="20px" height="20px"></a> <a href="https://youtube.com/" target="_blank"><img src="../img/you.png" alt="youtube" width="20px" height="20px"></a>
+            <p>Las mejores peliculas <b>DEPELIS.COM</b></p>
+           
+        </footer>
     <!-- javascript -->
     <script src="../js/script.js"></script>
 </body>
