Se agregó link de inicio al logo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pelis Web</title>
+    <title>DePelis</title>
     <!-- estilos -->
     <link rel="stylesheet" href="./styles/style.css">
     <!-- favicon -->
@@ -17,7 +17,7 @@
     <!-- INICIO DEL HEADER -->
     <header>
         <div class="nav1">
-            <a class="logo" href=""><img src="./img/logo.png" alt="logo" height="68px"></a>
+            <a class="logo" href="../index.html"><img src="./img/logo.png" alt="logo" height="68px"></a>
             <nav>
                 <a href="#explorar">Explorar</a>
                 <a href="#peliculas">Peliculas</a>
@@ -104,10 +104,8 @@
  <footer class="foot">
     <a href="https://twitter.com/" target="_blank"><img src="img/twiter.png" alt="twiter" width="20px" height="20px"></a> <a href="https://facebook.com/" target="_blank"><img src="img/face.png" alt="facebook" width="20px" height="20px"></a> <a href="https://youtube.com/" target="_blank"><img src="img/you.png" alt="youtube" width="20px" height="20px"></a>
         <p>Las mejores peliculas <b>DEPELIS.COM</b></p>
-       
     </footer>
     
-
     <!-- javascript -->
     <script src="./js/script.js"></script>
 </body>
