--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- INICIO DEL HEADER -->
     <header>
         <div class="nav1">
-            <a class="logo" href="../index.html"><img src="./img/logo.png" alt="logo" height="68px"></a>
+            <a class="logo" href="./index.html"><img src="./img/logo.png" alt="logo" height="68px"></a>
             <nav>
                 <a href="#explorar">Explorar</a>
                 <a href="#peliculas">Peliculas</a>
