--- a/pages/detalles.html
+++ b/pages/detalles.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DePelis | Detalles</title>
+    <title>DEPELIS - DETALLES</title>
     <!-- estilos -->
     <link rel="stylesheet" href="../styles/style.css">
     <!-- favicon -->
@@ -36,6 +36,7 @@
     </header>
     <!-- FIN DEL HEADER -->
 
+    <!-- INICIO DE MAIN -->
     <main>
         <section class="peli-detalles">
 			<div class="contenedor">
@@ -49,10 +50,22 @@
 			</div>
 		</section>
     </main>
+    <!-- FIN DE MAIN -->
+
+     <!-- FOOTER -->
     <footer class="foot">
-        <a href="https://twitter.com/" target="_blank"><img src="../img/twiter.png" alt="twiter" width="20px" height="20px"></a> <a href="https://facebook.com/" target="_blank"><img src="../img/face.png" alt="facebook" width="20px" height="20px"></a> <a href="https://youtube.com/" target="_blank"><img src="../img/you.png" alt="youtube" width="20px" height="20px"></a>
-            <p>Las mejores peliculas <b>DEPELIS.COM</b></p>
-        </footer>
+        <a href="https://twitter.com/" target="_blank">
+            <img src="../img/twiter.png" alt="twiter" width="20px" height="20px">
+        </a> 
+        <a href="https://facebook.com/" target="_blank">
+            <img src="../img/face.png" alt="facebook" width="20px" height="20px">
+        </a> 
+        <a href="https://youtube.com/" target="_blank">
+            <img src="../img/you.png" alt="youtube" width="20px" height="20px">
+        </a>
+        <p>LAS MEJORES PELÍCULAS <b>&copy;DEPELIS.COM</b></p>
+    </footer>
+    <!-- FIN FOOTER -->
 
     <!-- javascript -->
     <script src="../js/script.js"></script>
