Se agregó un slider a la página principal y se créo la página contacto.html

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         <div class="nav1" id="header">
             <a class="logo" href="./index.html"><img src="./img/logo.png" alt="logo" height="68px"></a>
             <nav>
-                <a href="#explorar">Explorar</a>
+                <a href="./index.html">Explorar</a>
                 <a href="#peliculas">Peliculas</a>
                 <a href="#series">Series</a>
                 <a href="#servicios">Servicios</a>
-                <a href="#contacto">Contacto</a>
+                <a href="./pages/contacto.html">Contacto</a>
             </nav>
             <i class="bi bi-list"></i>
         </div>
@@ -76,7 +76,7 @@
 
         <h2>CIENCIA FICCIÓN</h2>
         <hr style="margin-left: 3em;margin-right: 3em">
-        <section>
+        <section class="contenedor-peli">
 
             <div class="peli-tarjeta">
                 <img src="./img/detalles/poster.png" alt="Póster de pelicula">
