--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DEPELIS - DETALLES</title>
+    <title>DEPELIS - CONTACTO</title>
     <!-- estilos -->
     <link rel="stylesheet" href="../styles/style.css">
     <!-- favicon -->
@@ -14,45 +14,47 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
 <body>
-    <!-- INICIO DEL HEADER -->
-    <header>
-        <div class="nav1">
+     <!-- INICIO DEL HEADER -->
+     <header>
+        <div class="nav1" id="header">
             <a class="logo" href="../index.html"><img src="../img/logo.png" alt="logo" height="68px"></a>
             <nav>
                 <a href="../index.html">Explorar</a>
                 <a href="#peliculas">Peliculas</a>
                 <a href="#series">Series</a>
                 <a href="#servicios">Servicios</a>
-                <a href="./contacto.html">Contacto</a>
+                <a href="./pages/contacto.html">Contacto</a>
             </nav>
             <i class="bi bi-list"></i>
         </div>
-        <div class="nav2">
-            <div>
-                <a class="fondo" href="#">Login</a>
-                <a class="fondo2" href="#">Registrarte</a>
-            </div>
-        <div>
     </header>
     <!-- FIN DEL HEADER -->
-
-    <!-- INICIO DE MAIN -->
     <main>
-        <section class="peli-detalles">
-			<div class="contenedor">
-                <img class="peli-poster" src="../img/detalles/poster.png" alt="Poster de película">
-				<h3 class="titulo">Interestellar</h3>
-				<p class="descripcion">
-					Narra las aventuras de un grupo de exploradores que hacen uso de un agujero de gusano recientemente descubierto para superar las limitaciones de los viajes espaciales tripulados y vencer las inmensas distancias que tiene un viaje interestelar.
-				</p>
-                <a role="button" class="btn-detalles" href="../index.html"><i class="bi bi-arrow-left-short"></i> Volver</a>
-				<button role="button" class="btn-detalles" id="btnReproducir"><i class="bi bi-play-fill"></i> Reproducir</button>
-			</div>
-		</section>
-    </main>
-    <!-- FIN DE MAIN -->
+        <section>
+            <!-- FORMULARIO DE CONTACTO -->
+            <div class="contenedor-contacto">
 
-     <!-- FOOTER -->
+                <h2>Contacto</h2>
+                
+                <form action="https://formspree.io/f/xvojvyqq" method="post">
+                    <fieldset id="fs-frm-inputs">
+                      <label for="full-name">Nombre completo</label>
+                        <input type="text" name="Nombre-completo" id="full-name" placeholder="Ej: Martin Riveros" required="">
+                      <label for="email-address">Correo electrónico</label>
+                        <input type="email" name="Correo-electronico" id="email-address" placeholder="Ej: martinriveros@gmail.com" required="">
+                      <label for="message">Mensaje</label>
+                        <textarea rows="5" name="Mensaje" id="message" placeholder="Ej: Hola me encanta su sitio 20/10 y god." required=""></textarea>
+                        <input type="hidden" name="_subject" id="email-subject" value="Enviar">
+                    </fieldset>
+                    <input type="submit" value="Enviar">
+                  </form>
+
+            </div>
+            <!-- FIN FORMULARIO DE CONTACTO -->
+        </section>
+    </main>
+
+    <!-- FOOTER -->
     <footer class="foot">
         <a href="https://twitter.com/" target="_blank">
             <img src="../img/twiter.png" alt="twiter" width="20px" height="20px">
