Se arregló la referencia de iconos del footer y se mejoraron los estiloc de contacto.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <!-- bootstrap-icons --> 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <!-- <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script> -->
 </head>
 <body>
     <!-- INICIO DEL HEADER -->
@@ -28,6 +27,12 @@
             </nav>
             <i class="bi bi-list"></i>
         </div>
+        <div class="nav2">
+            <div>
+                <a class="fondo" href="#">Login</a>
+                <a class="fondo2" href="#">Registrarte</a>
+            </div>
+        <div>
     </header>
     <!-- FIN DEL HEADER -->
 
@@ -141,13 +146,13 @@
     <!-- FOOTER -->
      <footer class="foot">
         <a href="https://twitter.com/" target="_blank">
-            <img src="../img/twiter.png" alt="twiter" width="20px" height="20px">
+            <img src="./img/twiter.png" alt="twiter" width="20px" height="20px">
         </a> 
         <a href="https://facebook.com/" target="_blank">
-            <img src="../img/face.png" alt="facebook" width="20px" height="20px">
+            <img src="./img/face.png" alt="facebook" width="20px" height="20px">
         </a> 
         <a href="https://youtube.com/" target="_blank">
-            <img src="../img/you.png" alt="youtube" width="20px" height="20px">
+            <img src="./img/you.png" alt="youtube" width="20px" height="20px">
         </a>
         <p>LAS MEJORES PELÍCULAS <b>&copy;DEPELIS.COM</b></p>
     </footer>
