--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -27,6 +27,12 @@
             </nav>
             <i class="bi bi-list"></i>
         </div>
+        <div class="nav2">
+            <div>
+                <a class="fondo" href="#">Login</a>
+                <a class="fondo2" href="#">Registrarte</a>
+            </div>
+        <div>
     </header>
     <!-- FIN DEL HEADER -->
     <main>
@@ -36,7 +42,7 @@
 
                 <h2>Contacto</h2>
                 
-                <form action="https://formspree.io/f/xvojvyqq" method="post">
+                <form action="https://formspree.io/f/xvojvyqq" method="post" autocomplete="off">
                     <fieldset id="fs-frm-inputs">
                       <label for="full-name">Nombre completo</label>
                         <input type="text" name="Nombre-completo" id="full-name" placeholder="Ej: Martin Riveros" required="">
